<resources>
    <string name="app_name">NotePad</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="the_home_manu">The home manu</string>
    <string name="new_note">New Note</string>
    <string name="unknown_title">Unknown Title</string>
    <string name="write_content_here">write content here!</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="type_your_notes_here">Type your notes here…</string>
    <string name="navigation_button">navigation button</string>
    <string name="edit_note">Edit Note</string>
    <string name="export">Export</string>
    <string name="export_option">dialog box option csv or txt file</string>
    <string name="import_csv">Import csv file only (list)</string>
    <string name="import_file">Import</string>
    <string name="export_options">Export options</string>
    <string name="update_note">Update Note</string>
</resources>