<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popup_menu_window"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_popup_background"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/ll_newNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:text="@string/new_note"
            android:textColor="@color/stroke_color"
            android:textStyle="italic" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0_3dp"
        android:background="@color/stroke_color" />

    <LinearLayout
        android:id="@+id/ll_export"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:contentDescription="@string/export_option"
            android:text="@string/export"
            android:textColor="@color/stroke_color"
            android:textStyle="italic" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0_3dp"
        android:background="@color/stroke_color" />

    <LinearLayout
        android:id="@+id/ll_importFile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone|normal"
        android:orientation="horizontal">

        <TextView
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:contentDescription="@string/import_csv"
            android:text="@string/import_file"
            android:textColor="@color/stroke_color"
            android:textStyle="italic" />

    </LinearLayout>

</LinearLayout>
