<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_1sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/toolbarLayout_iBtn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/navigation_button"
            android:padding="@dimen/_12sdp"
            android:src="@drawable/baseline_arrow_back24"
            android:visibility="invisible"
            tools:background="@color/stroke_color"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/toolbarLayout_tv_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/title"
            android:textColor="@color/stroke_color"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/toolbarLayout_iBtn_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/the_home_manu"
            android:padding="@dimen/_12sdp"
            android:src="@drawable/baseline_menu_24"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.ShapeAbleImageView" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="@dimen/padding_14"
        android:background="@color/stroke_color" />

</LinearLayout>